--- a/#src/scss/_vars.scss
+++ b/#src/scss/_vars.scss
@@ -11,6 +11,7 @@
 $color-text: #556680;
 $color-green: #00760c;
 $color-green-light: #039812;
+$color-orange: #ff7300;
 %roboto-mono-regular {
 	font-family: "Roboto Mono", monospace;
 	font-weight: 400;
