--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -2,1099 +2,9 @@
 @import "fonts";
 @import "global";
 @import "slick";
-
-.section-top {
-	margin-top: 58px;
-
-	&__inner {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-	}
-
-	&__box {
-		text-transform: uppercase;
-	}
-
-	&__title {
-		color: #4c75b2;
-		@extend %sans-narrow-bold;
-		font-size: 72px;
-		letter-spacing: 0.275em;
-	}
-
-	&__text-box {
-		margin-top: 40px;
-		display: flex;
-		align-items: center;
-		margin-bottom: 60px;
-		margin-right: 5px;
-	}
-
-	&__percent {
-		@extend %sans-narrow-regular;
-		font-size: 72px;
-		letter-spacing: 0.275em;
-	}
-
-	&__text {
-		@extend %roboto-mono-bold;
-		font-size: 18px;
-		letter-spacing: 0.1em;
-		span {
-			display: block;
-			font-size: 12px;
-			letter-spacing: 0.06em;
-			margin-top: 10px;
-		}
-	}
-
-	&__btn {
-		@extend %btn;
-	}
-
-	&__img {
-		position: relative;
-		&::before {
-			content: "";
-			display: block;
-			background-color: #00760c;
-			position: absolute;
-			width: 100%;
-			height: 100%;
-			z-index: -1;
-			transform: translate(200px, 100px);
-		}
-		img {
-			max-width: 782px;
-		}
-	}
-}
-
-.products {
-	margin-top: 190px;
-	&__inner {
-		display: flex;
-		flex-direction: column;
-	}
-
-	&__items {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-		margin-bottom: 50px;
-	}
-
-	&__item {
-		width: 280px;
-		height: 400px;
-		position: relative;
-		display: flex;
-		align-items: flex-end;
-		background: linear-gradient(33.67deg, rgba(12, 128, 255, 0.087) 3.04%, rgba(12, 36, 62, 0) 98.92%);
-		box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
-		padding: 0 25px 32px;
-		color: #000;
-	}
-
-	&__bg {
-		background-repeat: no-repeat;
-		position: absolute;
-		bottom: 0;
-		right: 0;
-		left: 0;
-		top: 0;
-		z-index: -1;
-	}
-
-	&__item-title {
-		text-transform: uppercase;
-		letter-spacing: 0.12em;
-	}
-
-	&__btn {
-		@extend %btn;
-		align-self: center;
-	}
-}
-.sale-slider {
-	margin-top: 90px;
-	background-color: #ff7300;
-
-	&__inner {
-		padding: 30px 0 49px;
-		text-transform: uppercase;
-		color: #fff;
-	}
-
-	&__offer {
-		background-color: #0d233f;
-		border-radius: 2px;
-		font-size: 12px;
-		line-height: 18px;
-		letter-spacing: 0.12em;
-		padding: 4px 10px;
-		display: inline-block;
-		margin-bottom: 5px;
-	}
-
-	&__items {
-		position: relative;
-		overflow: hidden;
-		padding: 0;
-		z-index: 1;
-	}
-	&__navigation {
-		position: absolute;
-		z-index: 2;
-		bottom: 0;
-		left: 0;
-		display: flex;
-		align-items: center;
-		line-height: 0;
-	}
-	&__dots {
-		margin: 0 15px;
-		font-size: 18px;
-	}
-
-	&__arrows {
-		cursor: pointer;
-		&:focus {
-			outline: none;
-		}
-	}
-
-	&__item {
-		flex: 0 0 100%;
-		display: flex;
-		justify-content: space-between;
-		&:focus {
-			outline: none;
-		}
-	}
-
-	&__box {
-		max-width: 500px;
-		align-self: center;
-		margin-bottom: 40px;
-	}
-
-	&__text {
-		@extend %sans-narrow-regular;
-		font-size: 50px;
-		line-height: 64px;
-		letter-spacing: 0.12em;
-		margin-bottom: 26px;
-	}
-
-	&__title {
-		@extend %sans-narrow-regular;
-		font-size: 30px;
-		line-height: 34px;
-		letter-spacing: 0.275em;
-	}
-
-	&__img {
-		max-width: 790px;
-		width: 100%;
-	}
-}
-.about-home {
-	padding: 120px 0;
-
-	&__inner {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-	}
-
-	&__text {
-		line-height: 24px;
-		max-width: 585px;
-		p {
-			text-indent: 40px;
-		}
-	}
-
-	&__img {
-		img {
-			max-width: 480px;
-		}
-	}
-}
-.count {
-	padding: 117px 0 125px;
-	background-color: $color-green;
-	&__inner {
-		display: flex;
-		justify-content: space-between;
-	}
-
-	&__item {
-		text-align: center;
-		width: 250px;
-	}
-
-	&__number {
-		@extend %sans-narrow-regular;
-		font-size: 38px;
-		letter-spacing: 0.275em;
-		color: #ff7300;
-	}
-
-	&__title {
-		color: #fff;
-		font-size: 14px;
-		line-height: 20px;
-		letter-spacing: 0.12em;
-		margin-top: 15px;
-		text-transform: uppercase;
-		@extend %roboto-mono-bold;
-	}
-}
-
-.trust {
-	padding: 120px 0 0;
-
-	&__text {
-		max-width: 425px;
-		line-height: 24px;
-		letter-spacing: -0.03em;
-		position: relative;
-		z-index: 4;
-		// padding-bottom: 240px;
-	}
-
-	&__items {
-		display: flex;
-		justify-content: space-between;
-		align-items: flex-end;
-		transform: translateY(-200px);
-		position: relative;
-		.slick-list.draggable {
-			padding: 0 0 0 235px !important;
-		}
-		.slick-track {
-			display: flex;
-			align-items: flex-end;
-			padding-bottom: 10px;
-		}
-		.slick-prev,
-		.slick-next {
-			position: absolute;
-			bottom: -40px;
-			right: 0;
-			display: inline-block;
-			z-index: 3;
-			font-size: 16px;
-			color: #000;
-			cursor: pointer;
-			&.slick-disabled {
-				opacity: 0.6;
-			}
-		}
-
-		.slick-prev {
-			right: 94px;
-		}
-		.slick-dots {
-			margin: 0;
-			list-style: none;
-			text-align: center;
-			position: absolute;
-			bottom: -40px;
-			right: 24px;
-			color: #000;
-			font-size: 16px;
-		}
-		.slick-dots li {
-			display: inline-block;
-			position: relative;
-			pointer-events: none;
-		}
-		.slick-dots li:not(.slick-active) {
-			display: none;
-		}
-		.slick-dots-button {
-			padding: 0;
-			background: none;
-			border: none;
-			color: inherit;
-			cursor: pointer;
-			outline: none;
-		}
-		.slick-dots-current,
-		.slick-dots-total {
-			display: inline-block;
-		}
-		.slick-dots-total {
-			opacity: 0.6;
-		}
-		.slick-dots-separator {
-			position: relative;
-			margin: 0 10px;
-		}
-		.slick-dots-separator::after {
-			content: "";
-			position: absolute;
-			top: 50%;
-			right: 1px;
-			width: 1px;
-			height: 16px;
-			background: #000;
-			transform: rotate(7deg) translateY(-50%);
-		}
-	}
-
-	&__item {
-		margin: 0 10px;
-		img {
-			width: 180px;
-			height: 260px;
-			box-shadow: 4px 4px 9px rgba(0, 0, 0, 0.25);
-		}
-		&.slick-current.slick-active.slick-center {
-			img {
-				width: 480px;
-				height: 680px;
-			}
-		}
-	}
-}
-
-.request-call {
-	background-color: $color-green-light;
-	padding: 108px 0 78px;
-	&__title {
-		color: #fff;
-	}
-
-	&__back {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-	}
-
-	&__name,
-	&__phone {
-		max-width: 380px;
-		width: 100%;
-		height: 60px;
-		padding: 0 10px 0 15px;
-		border: 2px solid #0c243e;
-	}
-
-	&__btn {
-		@extend %btn;
-		border: none;
-		max-width: 380px;
-		width: 100%;
-	}
-
-	&__label {
-		margin-top: 38px;
-		display: flex;
-	}
-
-	&__check {
-		margin-right: 12px;
-	}
-
-	&__text {
-		margin: 0;
-		color: #fff;
-		letter-spacing: -0.03em;
-	}
-
-	&__link {
-		color: #fff;
-		text-decoration: underline;
-	}
-}
-
-.footer {
-	background-color: $color-green;
-	padding-bottom: 20px;
-	&__inner {
-		display: flex;
-		justify-content: space-between;
-		padding: 86px 0;
-		color: #fff;
-	}
-
-	&__item {
-		width: 150px;
-	}
-
-	&__item-title {
-		text-transform: uppercase;
-		@extend %roboto-mono-bold;
-		letter-spacing: 0.12em;
-		font-size: 18px;
-	}
-
-	&__menu-list {
-		margin-top: 38px;
-	}
-
-	&__menu-item {
-		margin-bottom: 21px;
-	}
-
-	&__menu-link {
-		font-style: normal;
-		color: #fff;
-		letter-spacing: -0.03em;
-		line-height: 20px;
-		text-transform: lowercase;
-		&:hover {
-			text-decoration: underline;
-		}
-	}
-
-	&__catalog {
-		width: 240px;
-	}
-
-	&__info {
-		width: 230px;
-	}
-
-	&__contacts {
-		width: 290px;
-		address.footer__menu-link:hover {
-			text-decoration: none;
-		}
-	}
-
-	&__police {
-		width: 300px;
-		color: #fff;
-		text-decoration: underline;
-		line-height: 24px;
-		margin-left: auto;
-		margin-right: 0;
-		display: block;
-	}
-}
-//========================================================================================================================================================
-// about
-.about {
-	padding-bottom: 90px;
-}
-.about-about {
-	&__inner {
-		display: flex;
-		justify-content: space-between;
-	}
-
-	&__text {
-		max-width: 585px;
-		p {
-			text-indent: 40px;
-		}
-		p:first-child {
-			margin-top: 0;
-		}
-	}
-
-	&__img {
-		img {
-			max-width: 480px;
-		}
-	}
-}
-
-.about-news {
-	&__inner {
-		p {
-			text-transform: uppercase;
-			@extend %roboto-mono-bold;
-			letter-spacing: 0.12em;
-		}
-	}
-}
-
-.about-gallery {
-	&__items {
-		position: relative;
-		overflow: hidden;
-		padding: 0;
-		z-index: 1;
-	}
-	&__item {
-		flex: 0 0 100%;
-		min-width: 0;
-		width: 100%;
-		height: 560px;
-	}
-
-	&__navigation {
-		position: absolute;
-		z-index: 2;
-		top: 0;
-		left: 0;
-		display: flex;
-		align-items: center;
-		line-height: 0;
-	}
-	&__dots {
-		margin: 0 15px;
-		font-size: 18px;
-	}
-
-	&__arrows {
-		cursor: pointer;
-		&:focus {
-			outline: none;
-		}
-	}
-}
-
-.about-vacancies {
-	&__inner {
-		display: flex;
-		justify-content: space-between;
-	}
-
-	&__text {
-		margin-top: 0;
-		max-width: 460px;
-		@extend %roboto-mono-bold;
-		text-transform: uppercase;
-		letter-spacing: 0.12em;
-		font-size: 14px;
-	}
-
-	&__img {
-		img {
-			max-width: 484px;
-		}
-	}
-}
-
-.about-articles {
-	&__prev {
-		display: flex;
-		justify-content: space-between;
-	}
-
-	&__prev-box {
-		max-width: 582px;
-	}
-
-	&__prev-title {
-		text-transform: uppercase;
-		@extend %roboto-mono-bold;
-		letter-spacing: 0.12em;
-	}
-
-	&__prev-text {
-		font-size: 14px;
-		text-indent: 30px;
-	}
-
-	&__prev-link {
-		@extend %btn;
-		width: 180px;
-		height: 30px;
-		text-transform: uppercase;
-		margin-top: 30px;
-	}
-
-	&__prev-img {
-		max-width: 480px;
-	}
-
-	&__slider {
-		margin-top: 90px;
-	}
-
-	&__slide {
-		margin: 0 10px;
-		flex: 0 0 245px;
-		height: 400px;
-		position: relative;
-		display: flex;
-		align-items: flex-end;
-		background: linear-gradient(360deg, rgba(12, 36, 62, 0.3) 20.12%, rgba(12, 36, 62, 0) 100%);
-		padding: 0 14px 15px;
-		color: #000;
-	}
-
-	&__slide-bg {
-		background-repeat: no-repeat;
-		background-size: cover;
-		position: absolute;
-		bottom: 0;
-		right: 0;
-		left: 0;
-		top: 0;
-		z-index: -1;
-	}
-
-	&__slide--title {
-		@extend %roboto-mono-bold;
-		font-size: 14px;
-		text-transform: uppercase;
-		letter-spacing: 0.12em;
-		color: #fff;
-	}
-
-	&__link {
-		margin-top: 60px;
-		@extend %btn;
-		height: 30px;
-		text-transform: uppercase;
-	}
-}
-.slider-about-articles {
-	position: relative;
-	&__body {
-		position: relative;
-		overflow: hidden;
-		padding: 0;
-		z-index: 1;
-	}
-	.swiper-wrapper {
-		margin: 0 -10px;
-	}
-	&__navigation {
-		position: absolute;
-		z-index: 2;
-		bottom: -25px;
-		right: 0;
-		display: flex;
-		align-items: center;
-		line-height: 0;
-	}
-	&__dots {
-		margin: 0 15px;
-		font-size: 18px;
-	}
-
-	&__arrows {
-		cursor: pointer;
-		&:focus {
-			outline: none;
-		}
-	}
-}
-
-.about-partners {
-	&__inner {
-		p {
-			text-transform: uppercase;
-			@extend %roboto-mono-bold;
-			letter-spacing: 0.12em;
-		}
-	}
-}
-
-//tabs
-.about-tabs {
-	.tab-item-about {
-		display: none;
-		&.active-tab {
-			display: block;
-		}
-	}
-}
-//========================================================================================================================================================
-//catalog
-.catalog {
-	padding: 20px 0 90px;
-	&__download {
-		display: flex;
-		justify-content: flex-end;
-	}
-
-	&__price {
-		@extend %btn;
-		font-weight: 400;
-		height: 40px;
-		text-transform: uppercase;
-		letter-spacing: 0.12em;
-		font-size: 12px;
-	}
-
-	&__tabs {
-		margin-top: 40px;
-	}
-}
-
-.tabs-catalog {
-	&__header {
-		display: flex;
-		flex-wrap: wrap;
-		margin: 0 -10px;
-		li {
-			padding: 0 10px 10px;
-		}
-	}
-
-	&__item {
-		width: 175px;
-		overflow: hidden;
-		text-align: center;
-		position: relative;
-		transition: all 0.3s;
-		border-radius: 10px;
-		&.active,
-		&:hover {
-			border: 3px solid #ff7300;
-			&::before {
-				content: "";
-				transition: all 0.3s;
-				top: 0;
-				left: 0;
-				right: 0;
-				bottom: 0;
-				background-color: rgba(#000, 0.5);
-				display: block;
-				position: absolute;
-			}
-			span {
-				opacity: 1;
-			}
-		}
-		span {
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			opacity: 0;
-			color: #fff;
-			text-transform: uppercase;
-			letter-spacing: -0.2px;
-			@extend %roboto-mono-bold;
-		}
-		img {
-			object-fit: cover;
-		}
-	}
-
-	&__body {
-		margin-top: 40px;
-	}
-
-	&__content {
-		display: none;
-		&.active {
-			display: flex;
-		}
-	}
-}
-
-.tabs-catalog {
-	&__subheader {
-		flex: 0 1 40%;
-		border-right: 1px solid rgba(#000, 0.4);
-	}
-
-	&__subbody {
-		flex: 0 1 60%;
-	}
-}
-.subheader-tabs-catalog {
-	&__item {
-		text-transform: uppercase;
-		color: $color-text;
-		font-weight: 700;
-		margin-bottom: 15px;
-		transition: all 0.3s color;
-		font-size: 20px;
-		&.active,
-		&:hover {
-			color: $color-orange;
-		}
-	}
-}
-.subbody-tabs-catalog {
-	&__content {
-		padding: 0 15px 0 25px;
-		display: none;
-		&.active {
-			display: flex;
-		}
-	}
-
-	&__column {
-		flex: 0 1 33.333%;
-		margin-right: 15px;
-		&:last-child {
-			margin-right: 0;
-		}
-	}
-
-	&__link {
-		display: block;
-		width: fit-content;
-		color: $color-text;
-		margin-bottom: 10px;
-		// padding-bottom: 2px;
-		border-bottom: 1px solid transparent;
-		transition: all 0.3s;
-		&:hover {
-			border-bottom: 1px solid $color-text;
-		}
-	}
-
-	&__seria {
-		text-align: center;
-		text-transform: uppercase;
-		color: $color-green;
-		font-weight: 700;
-		letter-spacing: 0.125em;
-		font-size: 18px;
-	}
-}
-
-//========================================================================================================================================================
-//subcatalog
-.subcatalog {
-	padding: 20px 0 90px;
-	&__title {
-		text-align: center;
-		font-size: 36px;
-		line-height: 42px;
-		text-transform: uppercase;
-	}
-	&__row {
-		display: flex;
-		margin-top: 40px;
-	}
-	&__seria {
-		min-width: 300px;
-	}
-	&__content {
-		margin-left: 30px;
-	}
-}
-.seria-subcatalog {
-	&__sidebar {
-		background-color: #ffffff;
-		padding: 0px 20px 26px;
-		border: 3px solid $color-orange;
-		margin-bottom: 30px;
-		width: 100%;
-	}
-
-	&__title {
-		font-size: 20px;
-		padding: 26px 0 19px;
-		font-weight: 700;
-		border-bottom: 1px solid $color-orange;
-	}
-
-	&__link {
-		color: $color-text;
-		padding: 0 10px 0 18px;
-		position: relative;
-		&::before {
-			content: "»";
-			position: absolute;
-			left: 0;
-			color: $color-green;
-		}
-	}
-
-	&__count {
-		color: rgba($color-text, 0.6);
-		&::after {
-			content: ")";
-		}
-		&::before {
-			content: "(";
-		}
-	}
-
-	&__menu {
-		margin-top: 20px;
-		li {
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			margin-bottom: 10px;
-			&:last-child {
-				margin-bottom: 0;
-			}
-		}
-	}
-}
-
-.content-subcatalog {
-	&__title {
-		font-size: 24px;
-		line-height: 28px;
-	}
-}
-.content-subcatalog {
-	&__items {
-		display: flex;
-		flex-wrap: wrap;
-		margin: 0 -10px;
-	}
-
-	&__item {
-		margin: 0 10px 15px;
-		flex: 0 1 30%;
-		border: 1px solid $color-orange;
-		border-radius: 5px;
-		padding: 15px;
-		text-align: center;
-		background-color: #fff;
-	}
-	&__text {
-		margin-top: 50px;
-		ul {
-			padding-left: 40px;
-		}
-		li {
-			list-style: disc;
-		}
-		h3 {
-			margin: 15px 0;
-		}
-	}
-}
-.item-subcatalog {
-	&__title {
-		text-transform: uppercase;
-		font-weight: 600;
-		margin-bottom: 20px;
-		font-size: 14px;
-	}
-	img {
-		width: 70px;
-		margin: 0 auto;
-	}
-	&__excerpt {
-		font-size: 14px;
-	}
-	&__more {
-		@extend %btn;
-		width: 100%;
-		height: 40px;
-	}
-}
-
-//========================================================================================================================================================
-//product
-
-.product {
-	padding: 20px 0 90px;
-
-	&__title {
-		text-align: center;
-		font-size: 36px;
-		line-height: 42px;
-		text-transform: uppercase;
-	}
-
-	&__row {
-		display: flex;
-		margin-top: 40px;
-	}
-
-	&__slider {
-		position: relative;
-		overflow: hidden;
-		padding: 0;
-		z-index: 1;
-		flex: 0 0 40%;
-	}
-	&__slider-dots {
-		display: flex;
-		position: relative;
-		flex-wrap: wrap;
-		z-index: 2;
-		justify-content: center;
-		counter-reset: item;
-		.swiper-pagination-bullet {
-			cursor: pointer;
-			position: relative;
-			width: 50px;
-			height: 50px;
-			margin: 0 10px;
-			border-radius: 50%;
-			border: 2px solid $color-orange;
-			overflow: hidden;
-			background-size: cover;
-			background-repeat: no-repeat;
-			background-position: center;
-			transition: all 0.3s;
-			&:focus {
-				outline: none;
-			}
-			&::after {
-				opacity: 0;
-				content: counter(item);
-				position: absolute;
-				width: 100%;
-				height: 100%;
-				top: 0;
-				left: 0;
-				counter-increment: item;
-				color: #fff;
-				display: flex;
-				justify-content: center;
-				align-items: center;
-				background-color: $color-orange;
-			}
-		}
-		.swiper-pagination-bullet-active {
-			border: none;
-			&::after {
-				opacity: 1;
-			}
-		}
-	}
-
-	&__description {
-		margin-left: 30px;
-	}
-}
-.slider-product {
-	&__item {
-		flex: 0 0 100%;
-		max-width: 100%;
-		height: 460px;
-		background-size: cover;
-		background-repeat: no-repeat;
-		background-position: center / 100%;
-	}
-}
-
-.description-product {
-	ul {
-		padding-left: 40px;
-	}
-	li {
-		list-style: disc;
-	}
-	&__more {
-		margin-top: 30px;
-	}
-
-	&__link {
-		display: block;
-		width: fit-content;
-		color: $color-orange;
-		text-decoration: underline;
-	}
-
-	&__btn {
-		margin-top: 30px;
-		@extend %btn;
-	}
-}
-
-//========================================================================================================================================================
-
-//========================================================================================================================================================
-
-//========================================================================================================================================================
-
-//========================================================================================================================================================
+@import "home";
+@import "about";
+@import "catalog";
+@import "subcatalog";
+@import "product";
+@import "information";
