--- a/#src/scss/_global.scss
+++ b/#src/scss/_global.scss
@@ -57,6 +57,7 @@ img {
 	margin-bottom: 50px;
 	position: relative;
 	z-index: 4;
+	line-height: 40px;
 }
 .slick-slide:focus {
 	outline: none;
@@ -98,46 +99,10 @@ img {
 	}
 }
 
-.submenu {
-	margin-top: 70px;
-	margin-bottom: 50px;
-	&__inner {
-		padding: 0 10px;
-	}
-
-	&__list {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		text-transform: uppercase;
-		letter-spacing: 0.12em;
-	}
-	&__item {
-		margin-right: 10px;
-		&:last-child {
-			margin-right: 0;
-		}
-	}
-	&__link {
-		color: $color-text;
-		@extend %roboto-mono-bold;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		line-height: 24px;
-		width: 180px;
-		height: 30px;
-		cursor: pointer;
-		transition: all 0.2s;
-		&:hover {
-			background-color: #ff7300;
-			color: #fff;
-		}
-		&.active {
-			background-color: #ff7300;
-			color: #fff;
-		}
-	}
+.developer {
+	text-transform: uppercase;
+	letter-spacing: 0.12em;
+	font-weight: 700;
 }
 
 .breadcrumbs {
