--- a/#src/scss/_global.scss
+++ b/#src/scss/_global.scss
@@ -11,12 +11,17 @@ body {
 	overflow-x: hidden;
 	margin: 0;
 	padding: 0;
+	height: 100%;
+	min-width: 320px;
 }
 body {
 	color: $color-text;
 	font-size: 16px;
 	line-height: 24px;
 	@extend %roboto-mono-regular;
+}
+body._lock {
+	overflow: hidden;
 }
 a {
 	text-decoration: none;
@@ -43,6 +48,15 @@ img {
 	// max-width: 100%;
 }
 
+.wrapper {
+	width: 100%;
+	min-height: 100%;
+	overflow: hidden;
+	display: flex;
+
+	flex-direction: column;
+}
+
 .container {
 	max-width: 1180px;
 	padding: 0 15px;
@@ -56,7 +70,7 @@ img {
 	letter-spacing: 0.275em;
 	margin-bottom: 50px;
 	position: relative;
-	z-index: 4;
+	// z-index: 4;
 	line-height: 40px;
 }
 .slick-slide:focus {
@@ -70,10 +84,20 @@ img {
 		align-items: center;
 		justify-content: space-between;
 	}
+	&__logo {
+		position: relative;
+		@media (max-width: 991.98px) {
+			z-index: 3;
+		}
+	}
 
 	&__phone {
+		position: relative;
 		color: $color-text;
 		font-size: 18px;
+		@media (max-width: 991.98px) {
+			z-index: 3;
+		}
 	}
 
 	&__menu-list {
@@ -85,6 +109,9 @@ img {
 
 	&__menu-item {
 		margin-left: 59px;
+		@media (max-width: 1150px) {
+			margin-left: 30px;
+		}
 	}
 
 	&__menu-link {
@@ -95,6 +122,72 @@ img {
 		&.active,
 		&:hover {
 			border-bottom: 1px solid $color-text;
+		}
+	}
+}
+.icon-menu {
+	display: none;
+	@media (max-width: 991.98px) {
+		display: block;
+		width: 30px;
+		position: relative;
+		height: 18px;
+		cursor: pointer;
+		z-index: 5;
+		& span {
+			transition: all 0.3s ease 0s;
+			top: calc(50% - 1px);
+			left: 0px;
+			position: absolute;
+			width: 100%;
+			height: 2px;
+			background-color: $color-text;
+		}
+
+		& span:first-child {
+			top: 0px;
+		}
+
+		& span:last-child {
+			top: auto;
+			bottom: 0px;
+		}
+
+		&._active span {
+			transform: scale(0);
+		}
+
+		&._active span:first-child {
+			transform: rotate(-45deg);
+			top: calc(50% - 1px);
+		}
+
+		&._active span:last-child {
+			transform: rotate(45deg);
+			bottom: calc(50% - 1px);
+		}
+	}
+}
+.menu__body {
+	@media (max-width: 991.98px) {
+		opacity: 0;
+		position: fixed;
+		height: 100%;
+		width: 100%;
+		top: 0;
+		visibility: hidden;
+		left: 0;
+		overflow: auto;
+		z-index: 2;
+		padding: 120px 20px 30px 20px;
+		-webkit-transition: all 0.3s ease 0s;
+		-o-transition: all 0.3s ease 0s;
+		transition: all 0.3s ease 0s;
+		background-color: #fff;
+
+		&._active {
+			opacity: 1;
+			visibility: visible;
 		}
 	}
 }
