--- a/#src/scss/_vars.scss
+++ b/#src/scss/_vars.scss
@@ -8,6 +8,13 @@
 	}
 }
 
+$maxWidth: 1180;
+@mixin adaptiv-font($pcSize, $mobSize) {
+	$addSize: $pcSize - $mobSize;
+	$maxWidth: $maxWidth - 320;
+	font-size: calc(#{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth}));
+}
+
 $color-text: #556680;
 $color-green: #00760c;
 $color-green-light: #039812;
