--- a/#src/scss/_global.scss
+++ b/#src/scss/_global.scss
@@ -77,9 +77,7 @@ img {
 		margin-bottom: 30px;
 	}
 }
-.slick-slide:focus {
-	outline: none;
-}
+
 .header {
 	margin-top: 15px;
 
@@ -92,6 +90,12 @@ img {
 		position: relative;
 		@media (max-width: 991.98px) {
 			z-index: 3;
+		}
+		@media (max-width: 575px) {
+			max-width: 250px;
+		}
+		@media (max-width: 400px) {
+			max-width: 200px;
 		}
 	}
 
