--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -106,26 +106,22 @@
 	&__items {
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
-		// grid-template-rows: repeat(2, 400px);
-		gap: 10px;
+		gap: 15px;
 		// display: flex;
 		// justify-content: center;
-		align-items: center;
+		// align-items: center;
 		// flex-wrap: wrap;
 		margin: 0 0 50px;
 		@media (max-width: 877px) {
 			grid-template-columns: repeat(2, 1fr);
-			// grid-template-rows: repeat(3, 400px);
 		}
 		@media (max-width: 611px) {
 			grid-template-columns: 1fr;
-			// grid-template-rows: repeat(6, 350px);
 		}
 	}
 
 	&__item {
 		// width: 280px;
-		// flex: 1 1 30%;
 		height: 400px;
 		position: relative;
 		display: flex;
@@ -134,12 +130,12 @@
 		box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
 		padding: 0 25px 32px;
 		color: #000;
-		// margin: 0 5px 15px;
 	}
 
 	&__bg {
 		background-repeat: no-repeat;
 		position: absolute;
+		background-position: right;
 		bottom: 0;
 		right: 0;
 		left: 0;
@@ -150,7 +146,6 @@
 	&__item-title {
 		text-transform: uppercase;
 		letter-spacing: 0.12em;
-		// white-space: nowrap;
 	}
 
 	&__btn {
@@ -211,6 +206,7 @@
 		flex: 0 0 100%;
 		display: flex;
 		justify-content: space-between;
+		position: relative;
 		&:focus {
 			outline: none;
 		}
@@ -218,28 +214,46 @@
 
 	&__box {
 		max-width: 500px;
+		width: 100%;
 		align-self: center;
 		margin-bottom: 40px;
+		@media (max-width: 991.98px) {
+			padding: 0 15px;
+		}
 	}
 
 	&__text {
 		@extend %sans-narrow-regular;
-		font-size: 50px;
-		line-height: 64px;
+		@include adaptiv-font(50, 40);
+		// font-size: 50px;
+		line-height: 1.5;
 		letter-spacing: 0.12em;
 		margin-bottom: 26px;
 	}
 
 	&__title {
 		@extend %sans-narrow-regular;
-		font-size: 30px;
-		line-height: 34px;
+		@include adaptiv-font(30, 21);
+		line-height: 1.4;
 		letter-spacing: 0.275em;
 	}
 
 	&__img {
-		max-width: 790px;
 		width: 100%;
+		height: 100%;
+		@media (max-width: 991.98px) {
+			position: absolute;
+			z-index: -1;
+			&::after {
+				content: "";
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				background-color: rgba(#000, 0.5);
+			}
+		}
 	}
 }
 .about-home {
