--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -258,18 +258,27 @@
 }
 .about-home {
 	padding: 120px 0;
+	@media (max-width: 991.98px) {
+		padding: 58px 0;
+	}
 
 	&__inner {
 		display: flex;
-		align-items: center;
 		justify-content: space-between;
+		@media (max-width: 874px) {
+			flex-direction: column;
+		}
 	}
 
 	&__text {
 		line-height: 24px;
 		max-width: 585px;
+		margin-right: 10px;
 		p {
 			text-indent: 40px;
+			&:first-child {
+				margin-top: 0;
+			}
 		}
 	}
 
@@ -279,92 +288,47 @@
 		}
 	}
 }
-.count {
-	padding: 117px 0 125px;
-	background-color: $color-green;
+
+.partners {
+	border-top: 3px dashed $color-text;
+	border-bottom: 3px dashed $color-text;
+	padding: 25px 0;
+	margin-bottom: 58px;
 	&__inner {
-		display: flex;
-		justify-content: space-between;
+		position: relative;
+		z-index: 1;
+		padding: 0 50px;
+	}
+
+	&__body {
+		overflow: hidden;
 	}
 
 	&__item {
-		text-align: center;
-		width: 250px;
-	}
-
-	&__number {
-		@extend %sans-narrow-regular;
-		font-size: 38px;
-		letter-spacing: 0.275em;
-		color: #ff7300;
-	}
-
-	&__title {
-		color: #fff;
-		font-size: 14px;
-		line-height: 20px;
-		letter-spacing: 0.12em;
-		margin-top: 15px;
-		text-transform: uppercase;
-		@extend %roboto-mono-bold;
-	}
-}
-
-.trust {
-	padding: 120px 0 0;
-
-	&__text {
-		max-width: 425px;
-		line-height: 24px;
-		letter-spacing: -0.03em;
-		position: relative;
-		z-index: 4;
-	}
-
-	&__items {
-		position: relative;
-		overflow: hidden;
-		padding: 0 0 35px;
-		transform: translateY(-120px);
-		z-index: 3;
-	}
-	&__items-navigation {
-		position: absolute;
-		z-index: 2;
-		bottom: 0;
-		right: 5px;
+		flex: 1 0 auto;
+		min-width: 0;
 		display: flex;
 		align-items: center;
+		justify-content: center;
+	}
+	&__navigation {
+		display: flex;
+		align-items: center;
+	}
+	&__arrows {
+		width: 33px;
+		height: 30px;
+		position: absolute;
+		top: 50%;
+		margin: -15px 0 0;
+		z-index: 2;
 		line-height: 0;
-	}
-	&__items-dots {
-		margin: 0 15px;
-		font-size: 18px;
-	}
-
-	&__items-arrows {
+		right: 0;
 		cursor: pointer;
-		&:focus {
-			outline: none;
-		}
+		outline: none;
 	}
-
-	&__items-body {
-		margin: 0 -10px;
-		.swiper-wrapper {
-			align-items: flex-end;
-		}
-	}
-
-	&__item {
-		margin: 0 10px;
-		flex: 0 0 180px;
-		height: 260px;
-		min-width: 0;
-		box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
-		&.swiper-slide-active {
-			flex: 0 0 480px;
-			height: 679px;
-		}
+	&__arrow-prev {
+		transform: rotate(180deg);
+		left: 0;
 	}
 }
